test: CategorySearchRequest에 관련된 코드 수정